--- a/index.html
+++ b/index.html
@@ -73,6 +73,40 @@
 
 
     <script>определяет выполнение сценария на стороне посетителя сайта. Может содержать сам скрипт или иметь ссылку на  внешний источник.</script>
-    <noscript>— ограничивает фрагмент документа, в котором скрипт не выполняется. </noscript>    
+    <noscript>— ограничивает фрагмент документа, в котором скрипт не выполняется. </noscript>   
+
+    <h1>Работа с таблицами</h1> 
+    <table></table> размещает таблицу. Все остальные теги для форматирования таблиц должны находиться внутри это контейнера.
+    <table>
+        <thead></thead> — определяет заголовок.
+
+<tbody></tbody> — отмечает тело таблицы.
+
+<td></td> — создаёт одну ячейку.
+
+<th></th> — указывает на заголовок ячейки.
+
+<tr> — создание одной строки.  
+
+<tfoot></tfoot> — показывает нижний колонтитул.
+
+<caption></caption> — вставляет подпись. Указывается после тега <table>.
+
+<col> — позволяет указать ширину и другие параметры одной или нескольких колонок.
+    </table>
+
+    <table>
+        <thead>Заголовок1 </thead><thead>Заголовок2 </thead><thead>Заголовок2 </thead>
+        <col>Тіло таблиці
+        <th>— указывает на заголовок ячейки.</th> 
+        <tr> — создание одной строки.  </tr>
+        <tr> — создание второй строки. </tr> 
+        <tr> — создание третей строки.  </tr>
+        <tfoot>— показывает нижний колонтитул.</tfoot> 
+        <caption> — вставляет подпись. Указывается после тега</caption> 
+        <col> — позволяет указать ширину и другие параметры одной или нескольких колонок.
+        </tbody>
+    </table>
+
 </body>
 </html>
