added button and form

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <col> — позволяет указать ширину и другие параметры одной или нескольких колонок.
     </table>
 
-    <table>
-        <thead>Заголовок1 </thead><thead>Заголовок2 </thead><thead>Заголовок2 </thead>
+    <table border='4px'>
+        <thead >Заголовок1 </thead><thead>Заголовок2 </thead><thead>Заголовок2 </thead>
         <col>Тіло таблиці
         <th>— указывает на заголовок ячейки.</th> 
         <tr> — создание одной строки.  </tr>
@@ -107,6 +107,17 @@
         <col> — позволяет указать ширину и другие параметры одной или нескольких колонок.
         </tbody>
     </table>
+    <h1>Создание форм и кнопок</h1>
+    <form>— создание форм на странице. С помощью HTML описывается только внешний вид, для выполнения функций требуется запуск соответствующих скриптов на сервере.
+        <p><button>Кнопка</button>  </p>
+        <p>формирует меню с поддержкой скроллинга. <select  multiple name="NAME" size="10%"></select> </p>
+        <p>создаёт ниспадающее меню. <select name="NAME"><option>1</option><option>2</option><option>3</option></select> </p>
+        <p><option></option> — описывает каждый отдельный пункт меню. </p>
+        <p>Формирует поля для добавления пользовательских данных. <input> </p>
+        <p>выводит результаты вычислений, сделанных с помощью скрипта. <output></output></p>
+        <P><label> — оформляет пометку для поля, созданного тегом input.</P>
+        <P><textarea></textarea> — создаёт большие поля для ввода текста.</P>
+    </form> 
 
 </body>
 </html>
